@@ -14,6 +14,7 @@ S3method(Effect, lm)
 S3method(Effect, mer)
 S3method(Effect, merMod)
 S3method(Effect, lme)
+S3method(Effect, clm2)
 S3method(Effect, gls)
 S3method(Effect, multinom)
 S3method(Effect, polr)
@@ -43,8 +44,12 @@ S3method(allEffects, gls)
 S3method(allEffects, mer)
 S3method(allEffects, merMod)
 S3method(allEffects, lme)
+S3method(allEffects, clm2)
 S3method(allEffects, poLCA)
 S3method(allEffects, mlm)
+S3method(effect,default)
+S3method(effect,mer)
+S3method(effect, merMod)
+S3method(effect, clm2)
 S3method(vcov, eff)
-S3method(vcov, fakeglm)
 S3method(`[`, efflist)
